# web-deep-cw-decoder

./: README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml  deploy-pages.yml  release.yml
public/: audioProcessor.js  model_ja.onnx
src/: App.tsx  DecodeDisplay.tsx  Decoder.tsx  Scope.tsx  const.ts  global.css  stft.ts  useDecode.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: Encoder.tsx  Training.tsx
src/core/: bayesianDecoder.ts  morseEncoder.ts  presetManager.ts
src/hooks/: useAudioProcessing.ts  useDecodeHistory.ts  useSpectrogramRenderer.ts
src/utils/: morseSignalDetector.ts  spectrogramUtils.ts
src/workers/: bayesianWorker.ts  inferenceWorker.ts
